# rust-salsa20

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
src/: embedded.rs  lib.rs  utils.rs
tests/: benchmarks.rs  encrypt-test.rs  generate-test.rs  set-counter.rs
